# thread_analysis

./: .gitignore  CLAUDE.md  PRD.md  README.md  pyproject.toml
.claude/rules/: git-workflow.md
.dev-kit/: .active-hooks.json  ci-config.json  loop-log.json
.dev-kit/hand-off/: plan→build.md
.githooks/: pre-push
.github/prompts/: review.md  security.md
.github/workflows/: auto-fix-pr.yml  ci.yml  review.yml
.prd/: decision-log.md
docs/: ci-review-architecture.md
hooks/: hooks.json  session-start-check.sh  task-detector.sh  worktree-guard.sh
hooks/lib/: worktree-detect.sh
phases/0-mvp/: index.json  step0.md  step1.md  step2.md  step3.md  step4.md
scripts/: branch-policy.sh  ci-local.sh  test.sh  validate.py
src/thread_analysis/: __init__.py  analyzer.py
tests/: conftest.py  test_analyzer.py  test_worktree_guard.py
